<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ILogistics</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">iLogistics</string>
    <string name="contentDescription"></string>
    <string name="login_title">Login</string>
    <string name="device_registration">Device Registration</string>

    <!-- DEVICE SETUP -->

    <string name="missing_device_registration">This phone is not registered</string>
    <string name="contact_admin">Please contact Administrator</string>
    <string name="copyright">© 2019 Compass Software Co. Ltd. All right reserved</string>


    <!-- MENU -->
    <string name="menu">Menu</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_contractor">Contractor</string>
    <string name="menu_route">Route</string>
    <string name="menu_assign">Assign</string>
    <string name="check_invoice">Check Invoice</string>
    <string name="view_delivery">View Delivery</string>
    <string name="route_job">Route Job</string>
    <string name="view_invoice">View Invoice</string>
    <string name="view_problem">View Problem</string>
    <string name="scan_product">Scan Product</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="transportName">Transport Name</string>

    <!-- BUTTON -->
    <string name="login">Login</string>
    <string name="checkin">CHECK IN</string>
    <string name="checkout">CHECK OUT</string>
    <string name="task">TASK</string>
    <string name="view">View</string>
    <string name="route_map">ROUTE MAP</string>
    <string name="map">VIEW MAP</string>
    <string name="complete">Complete</string>
    <string name="save">Save</string>
    <string name="remarkJobRoute">remark</string>


    <!-- TEXTVIEW PROMPT -->
    <string name="date">Date</string>
    <string name="adminLogin">Admin Login</string>
    <string name="driverLogin">Driver Log-in</string>
    <string name="selectTransport">Select Transport &amp; Phone Number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="route">Route Code</string>
    <string name="round">Round</string>
    <string name="cash">CASH</string>
    <string name="problem">Problem</string>
    <string name="quantity">Qty</string>
    <string name="remark">Remark</string>
    <string name="customers">Customers</string>
    <string name="invoices">Invoices</string>
    <string name="invoicecomp">Invoice</string>
    <string name="invoiceprob">Invoice</string>
    <string name="invoicenotcom">Invoice</string>
    <string name="myQRCode">My QR Code Log-in</string>


    <!-- MESSAGE -->
    <string name="loginfail">username or password not correct</string>
    <string name="serviceSuccess">Service Completed</string>
    <string name="serviceFail">Service Fail</string>
    <string name="wait">Please Wait..</string>
    <string name="findLocation">Finding Location..</string>
    <string name="confirm_invoice">Are you sure you want to complete invoice</string>
    <string name="require_problem">PLEASE INSERT PROBLEM</string>
    <string name="require_cash">PLEASE INSERT CASH RECEIVE AMOUNT</string>
    <string name="qty_alert">Quantity entered by you is more than quantity ordered</string>
    <string name="hotline_alert">Contact Jagota Logistics Hotline 0827905152</string>
    <string name="hotline_call">Call</string>
    <string name="hotline_cancel">Cancel</string>
    <string name="checkout_loc">Please check out location</string>
    <string name="appVersiontxt">Version</string>
    <string name="finish_invoice">Please press \'Complete\' before moving to next invoice</string>
    <string name="selectProblem">Please select any problem first</string>
    <string name="otpMismatch">Please enter correct OTP.</string>

    <!-- HINT -->
    <string name="search">Search</string>
    <string name="problem_prompt">Choose a problem</string>

    <string-array name="problem_array">
        <item>สินค้านํ้าหนักขาด (Weight Loss)</item>
        <item>สินค้าไม่ใช่สเป็คที่ลูกค้าต้องการ</item>
        <item>ลูกค้าแจ้งยกเลิก</item>
    </string-array>

    <!-- PUSH NOTIFICATE -->
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server, but re-registering anyways.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_phone_number">PhoneNumberActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Map & List screen -->
    <string name="logout">Log Out</string>
    <string name="manage_route">Manage Route</string>
    <string name="map_segment">Map</string>
    <string name="list_segment">List</string>
    <string name="number_of_shop_locations">%1$s Shop/Locations</string>
    <string name="start_location">Start location</string>
    <string name="warehouse">Warehouse</string>
    <string name="drop_off">Drop Off</string>
    <string name="total_distance">Total Distance</string>
    <string name="arrives_before">Arrives Before</string>

</resources>