<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    style="@style/HeaderBar"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:gravity="center_vertical">

        <TextView
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_white"
            android:text="@string/logout" />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/manage_route"
            android:textColor="@color/primary_white"
            android:gravity="center"/>

        <TextView
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_white"
            android:text="@string/save" />

    </LinearLayout>

</android.support.v7.widget.Toolbar>