<?xml version="1.0" encoding="utf-8"?> 

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/radialback">
    <ScrollView android:id="@+id/scrollView"
		  android:layout_width="fill_parent"
		  android:layout_height="fill_parent"
		  android:scrollbars="vertical"
		  android:fillViewport="true">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:orientation="vertical"
			android:gravity="bottom">
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_gravity="center_vertical"
				android:gravity="center">

			<TextView android:id="@+id/phone_number_title"
				  style="@android:style/TextAppearance.DeviceDefault.Large"
				  android:layout_width="match_parent"
				  android:layout_height="45dp"
				  android:text="@string/device_registration"
				  android:textColor="#ffffff"
				  android:textSize="25sp"
				  android:textStyle="bold"
				  android:typeface="serif"
				  android:gravity="center"
				  android:background="@android:color/holo_blue_light"/>
				<LinearLayout
					android:orientation="vertical"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_gravity="center_vertical"
					android:paddingLeft="10dp"
					android:paddingRight="10dp"
					android:gravity="center">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:orientation="vertical"
			android:gravity="bottom">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:gravity="center"
				android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					style="@android:style/TextAppearance.DeviceDefault.Large"
					android:typeface="serif"
					android:textColor="#ffffff"
					android:textSize="24sp"
					android:layout_marginBottom="30dip"
					android:text="@string/selectTransport"/>


				<TextView
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				style="@android:style/TextAppearance.DeviceDefault.Large"
				android:typeface="serif"
				android:textColor="#ffffff"
				android:text="@string/transportName"/>

			<EditText android:id="@+id/transportNameTxt"
				android:inputType="number"
				android:layout_width="300dp"
				android:layout_height="50dp"
				android:layout_marginTop="5dip"
				android:layout_marginBottom="20dip"
				android:singleLine="true"
				android:background="@drawable/text_selector"
				android:imeOptions="actionDone"
				style="@style/customEditText"/>

			<TextView
				  android:layout_width="300dp"
				  android:layout_height="wrap_content"
				  android:textStyle="bold"
				  style="@android:style/TextAppearance.DeviceDefault.Large"
				  android:typeface="serif"
				  android:textColor="#ffffff"
				  android:text="@string/phoneNumber"/>

				<EditText android:id="@+id/phoneNumberTxt"
					android:inputType="number"
					android:layout_width="300dp"
					android:layout_height="50dp"
					android:layout_marginTop="5dip"
					android:layout_marginBottom="20dip"
					android:singleLine="true"
					android:background="@drawable/text_selector"
					android:imeOptions="actionDone"
					style="@style/customEditText"/>
				<Button android:id="@+id/btnPhoneNumber"
					android:background="@drawable/button_blue"
					android:textSize="18sp"
					android:text="@string/save"
					style="@style/ButtonText1"
					android:onClick="savePhoneNumber"/>
				</LinearLayout>
			<TextView
				style="@android:style/TextAppearance.DeviceDefault.Large"
				android:layout_width="match_parent"
				android:layout_height="45dp"
				android:text="@string/companyNameLogin"
				android:textColor="#ffffff"
				android:textSize="30sp"
				android:textStyle="bold"
				android:gravity="center|bottom"/>
			<TextView
				android:id="@+id/appVersion2"
				style="@android:style/TextAppearance.DeviceDefault.Large"
				android:layout_width="match_parent"
				android:layout_height="20dp"
				android:text="@string/appVersiontxt"
				android:textColor="#ffffff"
				android:textSize="15sp"
				android:textStyle="bold"
				android:gravity="center|bottom"/>
		</LinearLayout>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>


	</ScrollView>
</LinearLayout>

