<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/radialback">
    <!-- android:background="@drawable/radialback"> bkgrd-->
	<!-- 
	<ViewStub android:id="@+id/vsHeader" 
	    android:inflatedId="@+id/header"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout="@layout/header" />
	-->
	<!-- 
    <com.compass.utils.AnimationView
		android:layout_width="fill_parent"
		android:layout_height="20dp"
		android:layout_gravity="center"/>
	--> 					
	<ScrollView android:id="@+id/scrollView"
		  android:layout_width="fill_parent"
		  android:layout_height="fill_parent"
		  android:scrollbars="vertical"
		  android:fillViewport="true">
	        <LinearLayout
			  android:orientation="vertical"
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent"
			  android:layout_gravity="center_vertical"
			  android:gravity="center">

				<TextView android:id="@+id/login_title"
					style="@android:style/TextAppearance.DeviceDefault.Large"
					android:layout_width="match_parent"
					android:layout_height="45dp"
					android:text="@string/title_activity_main"
					android:textColor="#ffffff"
					android:textSize="25sp"
					android:textStyle="bold"
					android:typeface="serif"
					android:gravity="center"
					android:background="@android:color/holo_blue_light"/>

				<LinearLayout android:id="@+id/login"
				  android:orientation="vertical"
				  android:layout_width="fill_parent"
				  android:layout_height="fill_parent"
				  android:layout_gravity="center_vertical"
				  android:paddingLeft="10dp"
				  android:paddingRight="10dp"
				  android:gravity="center">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:orientation="vertical"
			android:gravity="bottom">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:gravity="center"
				android:orientation="vertical">

			<TextView
						android:layout_width="200dp"
						android:layout_height="wrap_content"
						android:textStyle="bold"
						style="@android:style/TextAppearance.DeviceDefault.Large"
						android:typeface="serif"
						android:textColor="#ffffff"
						android:textSize="24sp"
						android:layout_marginBottom="30dip"
						android:text="@string/adminLogin"/>
					  <TextView
				      	android:layout_width="300dp"
				  		android:layout_height="wrap_content"
				        android:textStyle="bold"
				        style="@android:style/TextAppearance.DeviceDefault.Large"
				        android:typeface="serif"
				        android:textColor="#ffffff"
				  		android:text="@string/username"/>
					  <EditText android:id="@+id/usernameTxt"
					    android:inputType="textVisiblePassword"
				      	android:layout_width="300dp"
				  		android:layout_height="wrap_content"
				  		android:layout_marginTop="5dip"
				  		android:layout_marginBottom="20dip"
				  		android:singleLine="true"
				  		android:background="@drawable/text_selector"
				  		android:imeOptions="actionDone"
				  		android:text=""
				  		style="@style/customEditText"/>
					  <TextView
				      	android:layout_width="300dp"
				  		android:layout_height="wrap_content"
				        android:textStyle="bold"
				        style="@android:style/TextAppearance.DeviceDefault.Large"
				        android:typeface="serif"
				        android:textColor="#ffffff"
				  		android:text="@string/password"/>
					  <EditText android:id="@+id/passwordTxt"
					    android:inputType="textPassword"
				      	android:layout_width="300dp"
				  		android:layout_height="wrap_content"
				  		android:layout_marginTop="5dip"
				  		android:layout_marginBottom="20dip"
				  		android:singleLine="true"
				  		android:background="@drawable/text_selector"
				  		android:imeOptions="actionDone"
				  		style="@style/customEditText"/>
					  <!-- ROYGBIV4240 -->
					  <Button android:id="@+id/btnLogin"
					      android:drawableLeft="@android:drawable/ic_lock_idle_lock"
					      android:background="@drawable/button_blue"
					      android:textSize="18sp"
					      android:text="@string/login"
					      style="@style/ButtonText1"
					      android:onClick="onButtonClicker"/>

			</LinearLayout>
					<TextView
						style="@android:style/TextAppearance.DeviceDefault.Large"
						android:layout_width="match_parent"
						android:layout_height="45dp"
						android:text="@string/companyNameLogin"
						android:textColor="#ffffff"
						android:textSize="30sp"
						android:textStyle="bold"
						android:gravity="center|bottom"/>
					<TextView
						android:id="@+id/appVersion1"
						style="@android:style/TextAppearance.DeviceDefault.Large"
						android:layout_width="match_parent"
						android:layout_height="20dp"
						android:text="@string/appVersiontxt"
						android:textColor="#ffffff"
						android:textSize="15sp"
						android:textStyle="bold"
						android:gravity="center|bottom"/>
		</LinearLayout>
				</LinearLayout>

				<LinearLayout
				    android:id="@+id/login1"
				    android:layout_width="fill_parent"
				    android:layout_height="match_parent"
				    android:orientation="vertical"
					android:visibility="visible">

				    <!--<TextView-->
				        <!--style="@android:style/TextAppearance.DeviceDefault.Large"-->
				        <!--android:layout_width="match_parent"-->
				        <!--android:layout_height="45dp"-->
				        <!--android:text="@string/appnameLogin"-->
				        <!--android:textColor="#ffffff"-->
				        <!--android:textSize="25sp"-->
				        <!--android:textStyle="bold"-->
				        <!--android:typeface="serif" -->
				        <!--android:gravity="center"-->
						<!--android:background="@android:color/holo_blue_light"/>-->

					<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="0dp"
							android:layout_weight="1"
							android:orientation="vertical"
							android:gravity="bottom">

						<LinearLayout
								android:layout_width="match_parent"
								android:layout_height="0dp"
								android:layout_weight="1"
								android:gravity="center"
								android:orientation="vertical">
							<TextView
								android:layout_width="200dp"
								android:layout_height="wrap_content"
								android:textStyle="bold"
								style="@android:style/TextAppearance.DeviceDefault.Large"
								android:typeface="serif"
								android:textColor="#ffffff"
								android:textSize="24sp"
								android:layout_marginBottom="30dip"
								android:text="@string/driverLogin"/>

							<TextView
									style="@android:style/TextAppearance.DeviceDefault.Large"
									android:layout_width="300dp"
									android:layout_height="wrap_content"
									android:text="@string/phoneNumber"
									android:textColor="#ffffff"
									android:textStyle="bold"
									android:typeface="serif" />

							<EditText
									android:id="@+id/phoneNumberTxt"
									style="@style/customEditText"
									android:layout_width="300dp"
									android:layout_height="wrap_content"
									android:layout_marginBottom="20dip"
									android:layout_marginTop="5dip"
									android:background="@drawable/text_selector"
									android:enabled="false"
									android:imeOptions="actionDone"
									android:inputType="textVisiblePassword"
									android:singleLine="true" />

							<TextView
									style="@android:style/TextAppearance.DeviceDefault.Large"
									android:layout_width="300dp"
									android:layout_height="wrap_content"
									android:text="@string/otp"
									android:textColor="#ffffff"
									android:textStyle="bold"
									android:typeface="serif" />

							<EditText
									android:id="@+id/otpTxt"
									style="@style/customEditText"
									android:layout_width="300dp"
									android:layout_height="wrap_content"
									android:layout_marginBottom="20dip"
									android:layout_marginTop="5dip"
									android:background="@drawable/text_selector"
									android:enabled="true"
									android:imeOptions="actionDone"
									android:inputType="number"
									android:singleLine="true" />

							<Button
									android:id="@+id/btnLogin1"
									style="@style/ButtonText1"
									android:background="@drawable/btn_bluetask"
									android:onClick="onButtonClicker"
									android:text="@string/task"
									android:textSize="18sp" />


						</LinearLayout>

						<LinearLayout
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:orientation="horizontal"
								android:gravity="right">

							<Button
									android:id="@+id/menu_admin"
									android:layout_width="110dp"
									android:layout_height="110dp"
									android:layout_gravity="bottom|right"
									android:drawableTop="@drawable/admin"
									android:onClick="onButtonClicker"
									android:shadowColor="#000000"
									android:shadowDx="1"
									android:shadowDy="-1"
									android:shadowRadius="1"
									android:text="@string/menu_admin"
									android:textColor="#ffffff"
									android:textSize="18sp"
									android:textStyle="bold"
									android:typeface="serif"
									android:background="#00ffffff" />

						</LinearLayout>

						
						<TextView
								style="@android:style/TextAppearance.DeviceDefault.Large"
								android:layout_width="match_parent"
								android:layout_height="45dp"
								android:text="@string/companyNameLogin"
								android:textColor="#ffffff"
								android:textSize="30sp"
								android:textStyle="bold"
								android:gravity="center|bottom"/>
						<TextView
						        android:id="@+id/appVersion"
								style="@android:style/TextAppearance.DeviceDefault.Large"
								android:layout_width="match_parent"
								android:layout_height="20dp"
								android:text="@string/appVersiontxt"
								android:textColor="#ffffff"
								android:textSize="15sp"
								android:textStyle="bold"
								android:gravity="center|bottom"/>
						

					</LinearLayout>

				</LinearLayout>

				<LinearLayout
				    android:id="@+id/login2"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:gravity="center"
				    android:orientation="vertical"
				    android:padding="10dp">

					  <TextView
				      	android:layout_width="fill_parent"
				  		android:layout_height="wrap_content"
				        android:textStyle="bold"
				        style="@android:style/TextAppearance.DeviceDefault.Large"
				        android:typeface="serif"
				        android:textColor="#ffffff"
				  		android:text="@string/date"/>
					  <EditText android:id="@+id/assignDateTxt"
					    android:inputType="textVisiblePassword"
				      	android:layout_width="fill_parent"
				  		android:layout_height="wrap_content"
				  		android:layout_marginTop="5dip"
				  		android:layout_marginBottom="20dip"
				  		android:singleLine="true"
				  		android:background="@drawable/text_selector"
				  		android:imeOptions="actionDone"
				  		style="@style/customEditText"/>
					  <TextView
				      	android:layout_width="fill_parent"
				  		android:layout_height="wrap_content"
				        android:textStyle="bold"
				        style="@android:style/TextAppearance.DeviceDefault.Large"
				        android:typeface="serif"
				        android:textColor="#ffffff"
				  		android:text="@string/route"/>
					  <EditText android:id="@+id/assignRouteTxt"
					    android:inputType="textVisiblePassword"
				      	android:layout_width="fill_parent"
				  		android:layout_height="wrap_content"
				  		android:layout_marginTop="5dip"
				  		android:layout_marginBottom="20dip"
				  		android:singleLine="true"
				  		android:background="@drawable/text_selector"
				  		android:imeOptions="actionDone"
				  		style="@style/customEditText"/>
					  <TextView
				      	android:layout_width="fill_parent"
				  		android:layout_height="wrap_content"
				        android:textStyle="bold"
				        style="@android:style/TextAppearance.DeviceDefault.Large"
				        android:typeface="serif"
				        android:textColor="#ffffff"
				  		android:text="@string/round"/>
					  <EditText android:id="@+id/assignRoundTxt"
					    android:inputType="number"
				      	android:layout_width="fill_parent"
				  		android:layout_height="wrap_content"
				  		android:layout_marginTop="5dip"
				  		android:layout_marginBottom="20dip"
				  		android:singleLine="true"
				  		android:background="@drawable/text_selector"
				  		android:imeOptions="actionDone"
				  		style="@style/customEditText"/>
					    <Button android:id="@+id/btnLogin2"
					      android:drawableLeft="@android:drawable/ic_lock_idle_lock" 
					      android:background="@drawable/button_blue"
					      android:textSize="18sp"
					      android:text="@string/menu_assign"
					      style="@style/ButtonText1"
					      android:onClick="onButtonClicker"/>
				</LinearLayout>

			</LinearLayout>
	</ScrollView>
</LinearLayout>