<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.compass.activity_registration_missing">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
            <ImageView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_delete_new"
                android:layout_gravity="center"
                android:paddingTop="100dp"
                android:id="@+id/userDp"/>

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_device_registration"
            android:textColor="#9f9f9f"
            android:textStyle="Text"
            android:typeface="Sukhumvit"
            android:layout_gravity="center"
            android:paddingTop="5dp" />

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_admin"
            android:textColor="#9f9f9f"
            android:textStyle="Text"
            android:typeface="Sukhumvit"
            android:layout_gravity="center"
            android:paddingTop="5dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_gravity="bottom">

        <TextView
            android:layout_width="fill_parent"
            android:text="@string/copyright"
            android:layout_height="30dp"
            android:gravity="center|bottom"
            android:textStyle="Text"
            android:typeface="Sukhumvit"
            android:layout_alignParentBottom="true"
            android:paddingBottom="10dp"/>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
